WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165843
iOS: An element with tabindex is not focusable unless there is no mouse event handler
https://bugs.webkit.org/show_bug.cgi?id=165843
Summary
iOS: An element with tabindex is not focusable unless there is no mouse event...
Ryosuke Niwa
Reported
2016-12-14 00:47:18 PST
On iOS, an element with tabindex ins't focusable unless there is a mouse event listener on it. <
rdar://problem/10587484
>
Attachments
Fixes the bug
(11.20 KB, patch)
2016-12-14 00:54 PST
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-12-14 00:54:00 PST
Created
attachment 297071
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2016-12-14 00:54:58 PST
Comment on
attachment 297071
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=297071&action=review
> Source/WebCore/page/ios/FrameIOS.mm:-264 > - ASSERT(!node->isInShadowTree() || node->containingShadowRoot()->mode() != ShadowRootMode::UserAgent); > -
Sorry, Antti, I forgot to address your review comment in
https://bugs.webkit.org/show_bug.cgi?id=165551#c18
so I'm fixing it here.
Ryosuke Niwa
Comment 3
2016-12-14 13:58:11 PST
Committed
r209833
: <
http://trac.webkit.org/changeset/209833
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug